--- a/css/style.css
+++ b/css/style.css
@@ -7,7 +7,7 @@
 
 html {
   font-size: 62.5%;
-  font-family: 'Mulish', sans-serif;
+  font-family: "Mulish", sans-serif;
 }
 
 body {
@@ -21,6 +21,11 @@ body {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+}
+
+.a_decoration, .header__menu li a, .footer a {
+  color: #fff;
+  text-decoration: none;
 }
 
 .header {
@@ -70,8 +75,6 @@ body {
 }
 
 .header__menu li a {
-  color: #fff;
-  text-decoration: none;
   font-weight: 500;
 }
 
@@ -111,11 +114,11 @@ main {
 
 .input {
   background-color: rgba(255, 255, 255, 0.1);
-  border: 2px solid white;
+  border: 2px solid #fff;
   border-radius: 28px;
   color: #fff;
   font-size: 1.6rem;
-  font-family: 'Mulish', sans-serif;
+  font-family: "Mulish", sans-serif;
   height: 55px;
   padding: 0px 20px;
   width: 75%;
@@ -238,9 +241,7 @@ main {
 }
 
 .footer a {
-  color: white;
   cursor: pointer;
-  text-decoration: none;
   font-size: 1.4rem;
   padding: 0px 8px;
 }
